@@ -1,3 +1,9 @@
+2015-02-06  Jason Merrill  <jason@redhat.com>
+
+	PR c++/64899
+	* init.c (build_vec_init): Handle default-initialized array with
+	constexpr default constructor.
+
 2015-02-04  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/64824
